[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/CharacterBase.gd" type="Script" id=1]
[ext_resource path="res://assets/images/UI/life_bar.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 self_color = texture(TEXTURE, UV);
	if (active)
		COLOR = vec4(1.0, 1.0, 1.0, self_color.a);
	else
		COLOR = self_color;
}"

[sub_resource type="ShaderMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 1 )
shader_param/active = null
_sections_unfolded = [ "shader_param" ]

[sub_resource type="AtlasTexture" id=3]

flags = 0
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 8 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 16, 8 )
margin_left = 3.0
margin_right = 3.0
margin_top = 4.0
margin_bottom = 2.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="AtlasTexture" id=5]

flags = 0
atlas = ExtResource( 2 )
region = Rect2( 0, 8, 16, 8 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false

[sub_resource type="StyleBoxTexture" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 16, 8 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="CharacterBase" type="KinematicBody2D" groups=[
"character",
"damageble",
]]

input_pickable = false
collision_layer = 3
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
speed = 120
weight = 1
max_life = 3
damage = 1
defense = 0
controller_type = null
ai_type = 0
learning_activated = true
learning_rate = 0.0
discount = 0.0
max_exploration_rate = 1.0
min_exploration_rate = 0.0
exploration_rate_decay_time = 0.0
experience_replay = false
experience_pool_size = 40
think_time = 0.1

[node name="Shadow" type="Polygon2D" parent="." index="0"]

polygon = PoolVector2Array( -8, -5, -4, -6, 4, -6, 8, -5, 10, -4, 12, -2, 13, 0, 12, 2, 10, 4, 8, 5, 4, 6, -4, 6, -8, 5, -10, 4, -12, 2, -13, 0, -12, -2, -10, -4 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 0.3 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="Sprite" type="Sprite" parent="." index="1"]

material = SubResource( 2 )
position = Vector2( 0, -19 )
region_rect = Rect2( 0, 640, 576, 80 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="2"]

build_mode = 0
polygon = PoolVector2Array( 13, 0, 12, -2, 10, -4, 8, -5, 4, -6, -4, -6, -8, -5, -10, -4, -12, -2, -13, 0, -12, 2, -10, 4, -8, 5, -4, 6, 4, 6, 8, 5, 10, 4, 12, 2 )

[node name="AttackArea" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="AttackAreaPolygon" type="CollisionPolygon2D" parent="AttackArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( 0, 0 )

[node name="HitBox" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="HitBoxPolygon" type="CollisionPolygon2D" parent="HitBox" index="0"]

build_mode = 0
polygon = PoolVector2Array( 0, 0 )

[node name="LifeBar" type="ProgressBar" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -52.0
margin_right = 20.0
margin_bottom = -44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 6 )
min_value = -6.0
max_value = 30.0
step = 1.0
page = 0.0
value = 30.0
exp_edit = false
rounded = true
percent_visible = false
_sections_unfolded = [ "custom_styles" ]

[node name="DamageBlinkTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]

[connection signal="timeout" from="DamageBlinkTimer" to="." method="_on_DamageBlinkTimer_timeout"]


